project_4/calico/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calico-demo
  labels:
    name: calico-demo
    environment: production
